--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gladson65.github.io/Book-Library",
+  "homepage": "https://gladson65.github.io/online-library",
   "name": "online-library",
   "private": true,
   "version": "0.0.0",
